some layout done, but gridlayout has scrollbar issue

--- a/main.css
+++ b/main.css
@@ -1,9 +1,41 @@
+/* seeing if git push works for me */
 body,
 html {
   /* height:100%; */
 
-  margin: 2px;
+  margin: 0px;
   padding: 0px;
 }
 
-/* seeing if git push works for me */
+.app {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-template-rows: 60px 1fr 60px;
+  grid-template-areas:            /*not sure if this is right*/
+    "header header header header"
+    "main main main main"
+    "footer footer footer footer"
+  ;
+
+
+}
+
+header {
+  grid-area: header;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+nav li {
+  display: inline-block;
+}
+main {
+  grid-area: main;
+}
+
+
+footer {
+  grid-area: footer;
+  text-align: center;
+}
